--- a/y/stylesheets/style.css
+++ b/y/stylesheets/style.css
@@ -31,6 +31,15 @@ height: 800px;
 
 }
 
+#location{
+  font-size:20px;
+  margin-top:-10px;
+  margin-left:60px;
+}
+
+.projects{
+  height: 500px;
+}
 
 /*fonts to consider! */
 /*font-family: 'Special Elite', cursive;
