--- a/y/stylesheets/style.css
+++ b/y/stylesheets/style.css
@@ -21,27 +21,27 @@ height: 800px;
   background-color: rgb(140, 14, 14);
 }
 #firstName {
-  font-size: 100px;
+  font-size: 150px;
   margin-bottom: -30px;
 }
 
 #lastName {
-  font-size: 45px;
+  font-size: 80px;
   letter-spacing: 15px;
   margin-top: -10px;
   margin-bottom: -10px;
 }
 
 #jobTitle{
-  font-size: 21px;
+  font-size: 31px;
   margin-top: -10px;
 
 }
 
 #location{
-  font-size:20px;
+  font-size:31px;
   margin-top:-10px;
-  margin-left:60px;
+  /*margin-left:60px;*/
 }
 
 #projBanner{
