added in new nav

--- a/y/stylesheets/style.css
+++ b/y/stylesheets/style.css
@@ -2,8 +2,30 @@
 body { background-color: rgb(216, 216, 216);
 
   }
-.navbar { color: rgb(140, 14, 14);
+  /*do i still need this?*/
+/*.navbar { color: rgb(140, 14, 14);*/
   }
+/* new nav stylings*/
+  .navbarInit {
+    color: white;
+    font-size: 20px;
+  }
+
+  .dropdown-toggle {
+    color: rgb(140, 14, 14);
+      font-family: 'Special Elite';
+      font-size:20px;
+      margin-top:10px;
+
+  }
+  .balance {
+    margin-top: 10px;
+  }
+
+
+
+
+
 .zermattBackground {
 
   background-image:url( "../images/backgroundZermatt.jpeg");
