updated footer font and color

--- a/y/stylesheets/style.css
+++ b/y/stylesheets/style.css
@@ -212,6 +212,8 @@ display : block;
 
 .ffont {
   font-size:20px;
+  color: rgb(140, 14, 14);
+    font-family: 'Special Elite', cursive;
 }
 /*fonts to consider! */
 /*font-family: 'Special Elite', cursive;
