added in Adventurer badge because why not

--- a/y/stylesheets/style.css
+++ b/y/stylesheets/style.css
@@ -227,6 +227,7 @@ display : block;
   color: rgb(140, 14, 14);
     font-family: 'Special Elite', cursive;
   font-size:21px;
+  padding-top: 10px;
 
 }
 
@@ -261,11 +262,12 @@ display : block;
   margin-right: 3px;
 }
 
-/*.trailhead {
-  height:35px;
+.adventurerTHLogo{
+  height:40px;
   display: block;
   margin: auto;
-  width: 50%;*/
+  padding-bottom:10px;
+  width: auto;
 
 }
 .formspree {
