--- a/y/stylesheets/style.css
+++ b/y/stylesheets/style.css
@@ -144,6 +144,22 @@ display : block;
   height: 255px;
 }
 
+.gRecipes {
+  background-image:url( "../images/gRecipes.png");
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 255px;
+}
+
+.fantasticWeather{
+  background-image:url( "../images/FantasticWeather.png");
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 255px;
+}
+
 
 .pTitle {
   margin-top:100px;
