re-added my trailhead logo

--- a/y/stylesheets/style.css
+++ b/y/stylesheets/style.css
@@ -227,6 +227,10 @@ display : block;
 .skillHer {
   margin-left: 15px;
 }
+
+.adjust {
+  margin-top: -2px; 
+}
 /*.bump {
   margin-left:60px;
 }*/
